# a7

./: .gitignore  .nojekyll  CONTRIBUTING.md  LICENSE  README.md
sdk/: .env.example  .gitignore  README.md  pyproject.toml  pyrightconfig.json  requirements_dev.txt
sdk/a7/: __init__.py  _version.py  auth.py  client.py  config.py  errors.py
sdk/a7/resources/: __init__.py  algo.py  auction.py  dataset.py  eobi.py  insights.py  mdp.py  orderbook.py  precalc.py  rdi.py  sd.py
sdk/examples/: auction_simulations.py  basic_usage.py  datasets.py  environments.py  list_algorithms.py  manifold_usage.py  market_insights.py  order_books.py  pure_calls_without_lib.py  reference_data.py
sdk/openapi/: Orderbook.yaml  algo.yaml  dataset.yaml  eobi.yaml  insights.yaml  mdp.yaml  precalc_management.yaml  rdi_v2.yaml  sd_v2.yaml  xetra_auction_simulations.yaml
sdk/tests/: __init__.py  conftest.py  ohlcv.yaml  test_algo.py  test_auth.py  test_client.py  test_eobi.py  test_errors.py  test_integration.py  test_mdp.py  test_rdi.py
usecases/: 01_simple_example.html  01_simple_example.ipynb  02_simple_rdi.html  02_simple_rdi.ipynb  03_cash_rates_benchmark_hedging.html  03_cash_rates_benchmark_hedging.ipynb  04_market_insights_pace_of_roll.ipynb  05_orderbook_reconstruction.ipynb  06_manifold_rdi_usage.ipynb  07_algorithm_usage.ipynb  README.md
